sourceforge (2.6-0+8+) unstable; urgency=low

  * Let's continue
  * [Christian] Added dependancy on rcs for our patched cvsweb
  * [Roland] Renamed db-upgrade26.pl to db-upgrade.pl.
  * [Roland] Split the parse_sql_file function out of db-upgrade.pl and
    into its own file (sqlparser.pm).

 -- Roland Mas <lolando@debian.org>  Mon, 18 Mar 2002 22:09:12 +0100

sourceforge (2.6-0+8) unstable; urgency=low

  * [Christian] Added debian/BUGS
  * [Christian] Corrected approve_pending bug
  * [Christian] Corrected wrong userid for CVS
  * [Christian] Fixed libmcryp4 dependancy
  * [Christian] Added anoncvs_ users in ldap db
  * [Roland] [From 2.5] Added man page for sourceforge-config (from a
    Docbook SGML file).  This fixes a lintian error.
  * [Christian] Added ldap support for chrooted anonymous cvs
  * [Roland] Minor typo-fixes here and there, and a few cosmetic changes.
  * [Roland] [From 2.5] Fixed unix_box entries.
  * [Roland] Fixed leftover cruft in /etc/nsswitch.conf purging.
  * [Roland] Made the header somewhat customizable (display/hide the
    banner, mainly).
  * [Roland] Transitioned to PostgreSQL 7.2.  That was far from easy,
    since PG 7.2 is much more anal retentive than 7.1.3.  In particular,
    foreign key constraints and indices are not automagically dropped,
    which caused strange errors and deep frustration in the upgrade path
    from the 2.5 series.
  * [Roland] While I was fixing that, I also took the opportunity to add
    some code to drop the useless "deadXX" columns that are introduced by
    the 2.5->2.6 upgrade (ALTER TABLE/DROP COLUMN not being implemented in
    PostgreSQL yet).
  * [Roland] Moved a few SQL statements used only in the 2.5->2.6 upgrade
    from db-upgrade26.pl to sf2.5-to-sf2.6.sql.

 -- Christian Bayle <bayle@aist.enst.fr>  Mon, 11 Mar 2002 23:54:57 +0100

sourceforge (2.6-0+7) unstable; urgency=low

  * [Roland] [From 2.5] Added templates to conffiles.